force-app/main/default/objects/QuoteLineItem/fields/Apply_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Apply_Contingency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Contingency</label>
    <type>Checkbox</type>
</CustomField>