force-app/main/default/objects/QuoteLineItem/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <label>Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>