force-app/main/default/objects/QuoteLineItem/fields/Preferred_Delivery_Hour__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Hour__c</fullName>
    <label>Preferred Delivery Hour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>