force-app/main/default/objects/QuoteLineItem/fields/Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Notes__c</fullName>
    <label>Special Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>